Replace 'Printer' with SLF4J and Log4J 2

--- a/src/main/resources/enigma.properties
+++ b/src/main/resources/enigma.properties
@@ -1,4 +1,4 @@
-enigma.splash.text=\nENIGMA EMULATOR\n
+enigma.splash.text=ENIGMA EMULATOR
 enigma.machine.slot.left.rotor.name=ENIGMA_1_III
 enigma.machine.slot.left.rotor.position=0
 enigma.machine.slot.left.ring.position=0
